--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,9 @@
             "providers": [
                 "Pine\\Impersonate\\ImpersonateServiceProvider"
             ]
+        },
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
         }
     }
 }
