--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,9 @@
             ]
         },
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-master": "1.0-dev"
         }
-    }
+    },
+    "minimum-stability" : "dev",
+    "prefer-stable" : true
 }
