--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0"
+        "phpunit/phpunit": "~6.0"
     },
     "scripts": {
         "test": "vendor/bin/phpunit"
