--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,13 @@
             "Pine\\Impersonate\\Test\\": "tests/"
         }
     },
+    "require": {
+        "php" : "^7.0"
+    },
     "require-dev": {
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "^6.3",
+        "orchestra/testbench":"~3.5.0",
+        "mockery/mockery": "^0.9.5"
     },
     "scripts": {
         "test": "vendor/bin/phpunit"
