--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 /vendor
 composer.phar
 composer.lock
-.DS_Store
+/**/**/.DS_Store
 Thumbs.db
-/phpunit.xml
 /.idea
+/.vscode
+.phpunit.result.cache
